syntax = "proto3";
package org.kobe.xbot.Utilities.Entities;

message Coordinate {
  double x = 1;
  double y = 2;
}

message CoordinateList {
  repeated Coordinate coordinates = 1;
}

message ControlPoint {
  double x = 1;
  double y = 2;
}

message BezierCurve {
  repeated ControlPoint controlPoints = 1;
}

enum RobotDirection {
  FRONT = 0;
  BACK = 1;
}

message TraversalOptions {
  optional double metersPerSecond = 1;
  optional double finalRotationDegrees = 2;
  optional double accelerationMetersPerSecond = 3;
  optional bool faceNearestReefAprilTag = 4;
  optional double faceNearestReefAprilTagPathThresholdPercentage = 5;
  optional RobotDirection faceNearestReefAprilTagDirection = 6;
  optional double finalRotationTurnSpeedFactor = 7;
}
message BezierCurves {
  repeated BezierCurve curves = 1;
  optional TraversalOptions options = 2;
}


message DoubleList {
  repeated double v = 1;
}
message StringList {
  repeated string v = 1;
}
message IntegerList {
  repeated int32 v = 1;
}
message BytesList {
  repeated bytes v = 1;
}
message LongList {
  repeated int64 v = 1;
}
message FloatList {
  repeated float v = 1;
}
message BoolList {
  repeated bool v = 1;
}
